reduce font-weight and add text-shadow to event-info h4. remove border and add box-shadow to event-info. add event-info h4 to selector in media query in order to prevent text from getting too small

--- a/src/components/battles/BattleEvent.css
+++ b/src/components/battles/BattleEvent.css
@@ -1,6 +1,6 @@
 .event {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 3em;
   text-align: center;
 }
@@ -46,7 +46,7 @@
   display: flex;
   flex-direction: column;
   background: white;
-  border: 1px solid red;
+  box-shadow: 1px 2px 5px black;
   border-radius: 10px;
   height: 100%;
   padding: 1em;
@@ -55,8 +55,9 @@
 
 .event-info h4 {
   color: red;
-  font-weight: 900;
+  font-weight: 800;
   text-transform: uppercase;
+  text-shadow: 1px 1px black;
 }
 
 .event-info p {
@@ -123,7 +124,8 @@
   }
 
   .killer-info h4,
-  .victim-info h4 {
+  .victim-info h4,
+  .event-info h4 {
     font-size: 1.5rem;
   }
 
